refactor(performance): 优化 ID 生成和用户查询服务
- 优化 ID 生成服务中的线程池初始化和日志记录- 改进用户查询服务中的缓存处理和数据库查询策略- 使用更高效的并发集合和流操作
- 修复了一些潜在的线程安全问题