@@ -21,10 +21,7 @@ import org.springframework.data.redis.core.SessionCallback;
 import org.springframework.stereotype.Service;
 import org.springframework.util.CollectionUtils;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.TimeUnit;
@@ -102,36 +99,42 @@ public class UserServiceImpl implements IUserService {
         if (CollectionUtils.isEmpty(userIdList)) {
             return Maps.newHashMap();
         }
+        // id <= 1000 的都是不合规数据
         userIdList = userIdList.stream().filter(id -> id > 10000).collect(Collectors.toList());
         if (CollectionUtils.isEmpty(userIdList)) {
             return Maps.newHashMap();
         }
-        // redis
+        // 批量生成 redis key
         List<String> keyList = new ArrayList<>();
         userIdList.forEach(userId -> {
             keyList.add(cacheKeyBuilder.buildUserInfoKey(userId));
         });
-        List<UserDTO> userDTOList = redisTemplate.opsForValue().multiGet(keyList).stream().filter(x -> x != null).collect(Collectors.toList());
+        // 使用Redis的multiGet()批量获取缓存数据，减少请求次数，提高查询效率
+        List<UserDTO> userDTOList = redisTemplate.opsForValue().multiGet(keyList).stream().filter(Objects::nonNull).collect(Collectors.toList());
         if (!CollectionUtils.isEmpty(userDTOList) && userDTOList.size() == userIdList.size()) {
             return userDTOList.stream().collect(Collectors.toMap(UserDTO::getUserId, x -> x));
         }
-        List<Long> userIdInCacheList = userDTOList.stream().map(UserDTO::getUserId).collect(Collectors.toList());
-        List<Long> userIdNotInCacheList = userIdList.stream().filter(x -> !userIdInCacheList.contains(x)).collect(Collectors.toList());
-        // 多线程查询 替换了union all
+        // Redis缓存中没有的数据，从数据库中查询
+        List<Long> userIdInCacheList = userDTOList.stream().map(UserDTO::getUserId).toList();
+        List<Long> userIdNotInCacheList = userIdList.stream().filter(x -> !userIdInCacheList.contains(x)).toList();
+        // 为了避免sharding-jdbc笛卡尔积路由，使用分片规则对user_id进行分组
         Map<Long, List<Long>> userIdMap = userIdNotInCacheList.stream().collect(Collectors.groupingBy(userId -> userId % 100));
         List<UserDTO> dbQueryResult = new CopyOnWriteArrayList<>();
+        // 并行查询数据库，提高查询效率
         userIdMap.values().parallelStream().forEach(queryUserIdList -> {
             List<UserPO> userPOList = userMapper.selectBatchIds(queryUserIdList);
             dbQueryResult.addAll(ConvertBeanUtils.convertList(userPOList, UserDTO.class));
         });
+        // 将数据库查询的数据批量保存到Redis
         if (!CollectionUtils.isEmpty(dbQueryResult)) {
             Map<String, UserDTO> saveCacheMap = dbQueryResult.stream().collect(Collectors.toMap(userDto -> cacheKeyBuilder.buildUserInfoKey(userDto.getUserId()), x -> x));
             redisTemplate.opsForValue().multiSet(saveCacheMap);
-            //对命令执行批量过期设置操作
+            //multiSet不能设置过期时间，使用管道设置，减少网路IO
             redisTemplate.executePipelined(new SessionCallback<>() {
                 @Override
                 public <K, V> Object execute(RedisOperations<K, V> operations) throws DataAccessException {
                     for (String redisKey : saveCacheMap.keySet()) {
+                        // 设置随机过期时间，以防止缓存雪崩
                         operations.expire((K) redisKey, createRandomTime(), TimeUnit.SECONDS);
                     }
                     return null;
